cleanup UI auth workflow

--- a/ScrutineerClient/src/index.html
+++ b/ScrutineerClient/src/index.html
@@ -7,7 +7,13 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+        <script type="text/javascript">
+            (function () {
+                window.zafClient = ZAFClient.init();
+                console.log('init');
+            })();
+        </script>
+    </head>
     <body>
         <app-root></app-root>
     </body>
