Set Prettier PrintWidth to 120 to avoid wrapping on short lines.

--- a/StewardClient/app-dev/assets/background.html
+++ b/StewardClient/app-dev/assets/background.html
@@ -1,10 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script
-      type="text/javascript"
-      src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"
-    ></script>
+    <script type="text/javascript" src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"></script>
     <!-- This script preloads the nav_bar app pane into the DOM so we can listen to route changes right away -->
     <script>
       var client = ZAFClient.init();
