--- a/StewardClient/src/index.html
+++ b/StewardClient/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <base href="/" />
     <meta charset="utf-8" />
+    <link rel="icon" type="image/ping" href="/assets/favicon.png">
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
